# gpt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/gpt/: __init__.py  __main__.py  attention.py  blocks.py  checkpoint.py  cli.py  dataset.py  embeddings.py  evaluation.py  generation.py  gpt.py  model.py  rope.py  tokenizer.py  training.py
src/gpt/data/: __init__.py  download.py
