[project]
name = "gpt"
version = "0.1.0"
description = "A GPT implementation from scratch."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.10.0",
]

[project.scripts]
gpt = "gpt.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpt"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
